Bug 92181 - [SKL] igt/kms_plane/plane-position-covered-pipe-b-plane-2 fail and cause system crash
Summary: [SKL] igt/kms_plane/plane-position-covered-pipe-b-plane-2 fail and cause syst...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: highest blocker
Assignee: cprigent
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-29 16:48 UTC by Olivier Berthier
Modified: 2016-04-21 13:16 UTC (History)
3 users (show)

See Also:
i915 platform: SKL
i915 features: display/atomic


Attachments
kern.log file. (889.90 KB, text/plain)
2015-09-29 16:48 UTC, Olivier Berthier
no flags Details
dmesg log file on drm-intel-testing-2015-10-10 (512.05 KB, text/plain)
2015-10-15 11:53 UTC, Olivier Berthier
no flags Details
dmesg log file on drm-intel-next-fixes-2015-11-06 (601.61 KB, text/plain)
2015-11-19 16:57 UTC, Olivier Berthier
no flags Details
4.5-rc1_nuc-skly_kms-flip_kern.log (1.06 MB, text/plain)
2016-02-02 10:24 UTC, cprigent
no flags Details

Description Olivier Berthier 2015-09-29 16:48:00 UTC
Created attachment 118526 [details]
kern.log file.

Setup:
-------

Hardware :
Platform: SKY LAKE Y A0 
CPU : Intel(R) Core(TM) m5-6Y57 CPU @ 1.10GHz (family: 6, model: 78  stepping: 3)
MCP : SKL-Y  D1 2+2 (ou ULX-D1)
QDF : QJK9 
CPU : SKL D0
Chipset PCH: Sunrise Point LP C1       
CRB : SKY LAKE Y LPDDR3 RVP3 CRB FAB2
Reworks : All Mandatories + FBS02,FBS03, F23, O-02 & O-06

Software:
Linux : Ubuntu 14.04.03 LTS 64 bits
BIOS : SKLSE2R1.R00.X097.B02.1509020030
ME FW : 11.0.0.1173
Ksc (EC FW): 1.19

kernel 4.3.0-rc2-drm-intel-nightly+
commit 794e1cdfb84be003dbd287c69501c98ec280a89b
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Mon Sep 28 17:28:29 2015 +0300

    drm-intel-nightly: 2015y-09m-28d-14h-28m-11s UTC integration manifest

cairo: (HEAD, tag: 1.14.2) 93422b3cb5e0ef8104b8194c8873124ce2f5ea2d from git://git.freedesktop.org/git/cairo
drm: (HEAD, tag: libdrm-2.4.64, tag: 2.4.64) ab2fadabde3829b1ec56bd4756165dd9bd281488 from git://git.freedesktop.org/git/mesa/drm
intel-driver: (HEAD, origin/master, origin/HEAD, master) 2a72f99d24714f2a58f400ef63b913d4cf9080b3 from git://git.freedesktop.org/git/vaapi/intel-driver
libva: (HEAD, tag: libva-1.6.1, origin/v1.6-branch) 613eb962b45fbbd1526d751e88e0d8897af6c0e0 from git://git.freedesktop.org/git/vaapi/libva
mesa: (HEAD, tag: mesa-10.6.7) 32efdc87cbf89cfe08ad9571cd756e27c803caa8 from git://git.freedesktop.org/git/mesa/mesa
xf86-video-intel: (HEAD, origin/master, origin/HEAD, master) f0fd4d500de03c30c7ce19915f85acadd1ca4e5d from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
xserver: (HEAD, tag: xorg-server-1.17.2) 2123f7682d522619f101b05fb75efa75dabbe371 from git://git.freedesktop.org/git/xorg/xserver

intel-gpu-tools: (HEAD, tag: intel-gpu-tools-1.12) 1f9e0550455be4b219954a026407dd23ec21b299 from git://git.freedesktop.org/git/xorg/app/intel-gpu-tools

The same bug has been found on the tag drm-intel-testing-2015-09-28.

Steps:
------
run the command :
# ./kms_plane --run-subtest plane-position-covered-pipe-B-plane-2

Actual result:
---------------
The result of the test is fail, after that the system crash.

Expected result:
----------------
The result is pass or skip, and no crash.

Program output:
---------------

IGT-Version: 1.12-g1f9e055 (x86_64) (Linux: 4.3.0-rc2-drm-intel-nightly+ x86_64)
Testing connector eDP-1 using pipe B plane 2
Testing connector DP-2 using pipe B plane 2
Test assertion failure function igt_assert_crc_equal, file igt_debugfs.c:235:
Failed assertion: a->crc[i] == b->crc[i]
error: 0xfb5b6d67 != 0x4592806e
Stack trace:
  #0 [__igt_fail_assert+0xf1]
  #1 [igt_assert_crc_equal+0x78]
  #2 [test_plane_position.constprop.7+0x2e4]
  #3 [run_tests_for_pipe_plane.constprop.4+0x211]
  #4 [__real_main402+0x6b]
  #5 [main+0x29]
  #6 [__libc_start_main+0xf5]
  #7 [_start+0x29]
  #8 [<unknown>+0x29]
Subtest plane-position-covered-pipe-B-plane-2 failed.
**** DEBUG ****
Test requirement passed: !(pipe >= data->display.n_pipes)
Test requirement passed: !(plane >= data->display.pipes[pipe].n_planes)
Testing connector eDP-1 using pipe B plane 2
display: eDP-1: set_pipe(B)
igt_create_fb_with_bo_size(width=3200, height=1800, format=0x34325258 [bpp=32], tiling=0x0, size=0
igt_create_fb_with_bo_size(handle=1, pitch=12800)
display: B.0: plane_set_fb(54)
display: commit {
display:     eDP-1: Selecting pipe B
display:     DP-2: Selecting pipe A
display:     eDP-1: SetCrtc pipe B, fb 54, panning (0, 0), mode 3200x1800
display: }
display: B.0: plane_set_fb(0)
display: commit {
display:     eDP-1: Selecting pipe B
display:     DP-2: Selecting pipe A
display:     eDP-1: SetCrtc pipe B, disabling
display: }
CRC for a (0.00,1.00,0.00) fb: 538dbe18 00000000 00000000 00000000 00000000
display: eDP-1: set_pipe(B)
igt_create_fb_with_bo_size(width=3200, height=1800, format=0x34325258 [bpp=32], tiling=0x0, size=0
igt_create_fb_with_bo_size(handle=1, pitch=12800)
display: B.0: plane_set_fb(54)
igt_create_fb_with_bo_size(width=64, height=64, format=0x34325258 [bpp=32], tiling=0x0, size=0
igt_create_fb_with_bo_size(handle=2, pitch=256)
display: B.2: plane_set_fb(56)
display: B.2: plane_set_position(100,100)
display: commit {
display:     eDP-1: Selecting pipe B
display:     DP-2: Selecting pipe A
display:     eDP-1: SetCrtc pipe B, fb 54, panning (0, 0), mode 3200x1800
display:     eDP-1: SetCursor pipe B, fb 2 64x64
display:     eDP-1: MoveCursor pipe B, (100, 100)
display: }
display: B.0: plane_set_fb(0)
display: B.2: plane_set_fb(0)
display: eDP-1: set_pipe(any)
Testing connector DP-2 using pipe B plane 2
display: DP-2: set_pipe(B)
igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258 [bpp=32], tiling=0x0, size=0
igt_create_fb_with_bo_size(handle=3, pitch=7680)
display: B.0: plane_set_fb(87)
display: commit {
display:     DP-2: Selecting pipe B
display:     eDP-1: Selecting pipe A
display:     DP-2: SetCrtc pipe B, fb 87, panning (0, 0), mode 1920x1080
display:     DP-2: SetCursor pipe B, disabling
display: }
display: B.0: plane_set_fb(0)
display: commit {
display:     DP-2: Selecting pipe B
display:     eDP-1: Selecting pipe A
display:     DP-2: SetCrtc pipe B, disabling
display: }
CRC for a (0.00,1.00,0.00) fb: fb5b6d67 00000000 00000000 00000000 00000000
display: DP-2: set_pipe(B)
igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258 [bpp=32], tiling=0x0, size=0
igt_create_fb_with_bo_size(handle=3, pitch=7680)
display: B.0: plane_set_fb(53)
igt_create_fb_with_bo_size(width=64, height=64, format=0x34325258 [bpp=32], tiling=0x0, size=0
igt_create_fb_with_bo_size(handle=4, pitch=256)
display: B.2: plane_set_fb(86)
display: B.2: plane_set_position(100,100)
display: commit {
display:     DP-2: Selecting pipe B
display:     eDP-1: Selecting pipe A
display:     DP-2: SetCrtc pipe B, fb 53, panning (0, 0), mode 1920x1080
display:     DP-2: SetCursor pipe B, fb 4 64x64
display:     DP-2: MoveCursor pipe B, (100, 100)
display: }
Test assertion failure function igt_assert_crc_equal, file igt_debugfs.c:235:
Failed assertion: a->crc[i] == b->crc[i]
error: 0xfb5b6d67 != 0x4592806e
****  END  ****
Subtest plane-position-covered-pipe-B-plane-2: FAIL (4.427s)
Comment 1 cprigent 2015-10-01 15:15:49 UTC
Bug scrub:
Priority updated, this is a blocker
Comment 2 Olivier Berthier 2015-10-15 11:53:04 UTC
Created attachment 118887 [details]
dmesg log file on drm-intel-testing-2015-10-10

The bug is still reproduced on Sky Lake Y with the drm-intel-testing-2015-10-10 kernel and with the patches :
http://lists.freedesktop.org/archives/intel-gfx/2015-August/074657.html
http://lists.freedesktop.org/archives/intel-gfx/2015-August/074828.html.

Setup:
------
kernel: drm-intel-testing 2015-10-10 c38f2c24fb6484fc6900efa6f8d968e8ee964e9c
cairo: 1.14.2 93422b3cb5e0ef8104b8194c8873124ce2f5ea2d 
libdrm: 2.4.65 c3496167637e35cf8a52d5e7e53a412e79d80db0
intel-driver: 1.6.1 35858c69166b845c59ca32e19a3dbb0b758df209 
libva: 1.6.1 613eb962b45fbbd1526d751e88e0d8897af6c0e0
mesa: 11.0.3 914966befcd57764941405707d8f57d3e7e7f768 
xf86-video-intel: 2.99.917 baec802b21387d04aebb10ac29e719a1800c5aa0 
xserver: 1.17.2 2123f7682d522619f101b05fb75efa75dabbe371

intel-gpu-tools: origin/master, origin/HEAD bfea74a9f64a900bcb90f946b38746781017449f
Comment 3 Maarten Lankhorst 2015-10-21 10:37:07 UTC
I'm seeing the below WARN when testing with displayport connected, previously I would probably get the same hard hang as well.

[   68.099084] ------------[ cut here ]------------
[   68.099101] WARNING: CPU: 0 PID: 1261 at drivers/gpu/drm/i915/intel_uncore.c:619 hsw_unclaimed_reg_debug+0x66/0x80 [i915]()
[   68.099102] Unclaimed register detected after writing to register 0x71240

[   68.099122] CPU: 0 PID: 1261 Comm: kms_plane Tainted: G     U  W       4.3.0-rc3-patser+ #4398
[   68.099124] Hardware name: Intel Corporation Skylake Client platform/Skylake DT DDR4 RVP8, BIOS SKLSE2R1.R00.B084.B02.1505180148 05/18/2015
[   68.099125]  ffffffffc01a8600 ffff880089dbb9c0 ffffffff812d3cfc ffff880089dbba08
[   68.099127]  ffff880089dbb9f8 ffffffff8107e2ad ffff880455b60000 0000000000071240
[   68.099130]  0000000000071240 ffff880455b60080 0000000000000246 ffff880089dbba58
[   68.099132] Call Trace:
[   68.099136]  [<ffffffff812d3cfc>] dump_stack+0x4e/0x82
[   68.099139]  [<ffffffff8107e2ad>] warn_slowpath_common+0x7d/0xb0
[   68.099141]  [<ffffffff8107e327>] warn_slowpath_fmt+0x47/0x50
[   68.099144]  [<ffffffff810a417d>] ? get_parent_ip+0xd/0x50
[   68.099159]  [<ffffffffc0124eb6>] hsw_unclaimed_reg_debug+0x66/0x80 [i915]
[   68.099172]  [<ffffffffc0129107>] gen9_write32+0x2a7/0x320 [i915]
[   68.099181]  [<ffffffffc00e6803>] skl_update_wm+0x2e3/0x710 [i915]
[   68.099190]  [<ffffffffc00e7bc9>] intel_update_watermarks+0x19/0x20 [i915]
[   68.099205]  [<ffffffffc014841e>] intel_atomic_commit+0x48e/0x13d0 [i915]
[   68.099208]  [<ffffffff813f3f2f>] ? drm_atomic_check_only+0x13f/0x5b0
[   68.099211]  [<ffffffff813f3a88>] ? drm_atomic_add_affected_connectors+0x88/0xf0
[   68.099214]  [<ffffffff813f43d2>] drm_atomic_commit+0x32/0x50
[   68.099216]  [<ffffffff813d2132>] drm_atomic_helper_set_config+0x72/0xb0
[   68.099219]  [<ffffffff813e440d>] drm_mode_set_config_internal+0x5d/0xf0
[   68.099220]  [<ffffffff813e84f3>] drm_mode_setcrtc+0x183/0x4c0
[   68.099223]  [<ffffffff813da43b>] drm_ioctl+0x12b/0x550
[   68.099225]  [<ffffffff813e8370>] ? drm_mode_setplane+0x1a0/0x1a0
[   68.099228]  [<ffffffff81285ea7>] ? ioctl_has_perm+0xa7/0xc0
[   68.099230]  [<ffffffff811a89fc>] do_vfs_ioctl+0x2fc/0x550
[   68.099232]  [<ffffffff81285f0b>] ? selinux_file_ioctl+0x4b/0xd0
[   68.099235]  [<ffffffff8127b4ae>] ? security_file_ioctl+0x3e/0x60
[   68.099236]  [<ffffffff811a8cc4>] SyS_ioctl+0x74/0x80
[   68.099239]  [<ffffffff817126d7>] entry_SYSCALL_64_fastpath+0x12/0x6a
[   68.099240] ---[ end trace a22947acc427d3eb ]---
Comment 4 Maarten Lankhorst 2015-10-21 13:03:48 UTC
It looks like the disabled watermarks get written after the power well is turned off. It should probably be done before crtc is turned off. I'll add Matt Roper to CC so he can take a look.
Comment 5 Matt Roper 2015-10-21 20:44:04 UTC
(In reply to Maarten Lankhorst from comment #4)
> It looks like the disabled watermarks get written after the power well is
> turned off. It should probably be done before crtc is turned off. I'll add
> Matt Roper to CC so he can take a look.

Yeah, I see the same unclaimed register on BXT too.  I don't think it's related to the atomic watermark changes as far as I can tell.

Honestly I'm not terribly familiar with the details of power well handling.  It seems to fix the issue if I apply changes like the patch below, but I'm not really sure that's the proper way to be handling it.  Paulo can probably comment on whether this is right or not...


diff --git a/drivers/gpu/drm/i915/intel_pm.c b/drivers/gpu/drm/i915/intel_pm.c
index df22b9c..fdc8a4e 100644
--- a/drivers/gpu/drm/i915/intel_pm.c
+++ b/drivers/gpu/drm/i915/intel_pm.c
@@ -3619,8 +3619,15 @@ static void skl_update_wm(struct drm_crtc *crtc)
        results->dirty[intel_crtc->pipe] = true;
 
        skl_update_other_pipe_wm(dev, crtc, &config, results);
+
+       intel_display_power_get(dev_priv, POWER_DOMAIN_PIPE_A);
+       intel_display_power_get(dev_priv, POWER_DOMAIN_PIPE_B);
+       intel_display_power_get(dev_priv, POWER_DOMAIN_PIPE_C);
        skl_write_wm_values(dev_priv, results);
        skl_flush_wm_values(dev_priv, results);
+       intel_display_power_put(dev_priv, POWER_DOMAIN_PIPE_C);
+       intel_display_power_put(dev_priv, POWER_DOMAIN_PIPE_B);
+       intel_display_power_put(dev_priv, POWER_DOMAIN_PIPE_A);
 
        /* store the new configuration */
        dev_priv->wm.skl_hw = *results;
Comment 6 Maarten Lankhorst 2015-10-22 09:53:52 UTC
I think you should just write watermark values before turning off the crtc if the crtc will end up being disabled. After that you should no longer touch the crtc specific registers since its turned off and dead.
Comment 7 Jani Nikula 2015-10-23 07:52:51 UTC
IIUC this is fixed by

commit 1d337b286098c8e9057854ee59dff05f8ffa81e6
Author: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Date:   Thu Oct 22 13:56:34 2015 +0200

    drm/i915/skl: Prevent unclaimed register writes on skylake.

in drm-intel-fixes, headed for v4.3. If the problem persists with current -fixes or -nightly, please do reopen.
Comment 8 Olivier Berthier 2015-11-19 16:57:39 UTC
Created attachment 119946 [details]
dmesg log file on drm-intel-next-fixes-2015-11-06

Maybe it isn't linked to this bug, the test pass but still cause a system crash with external DP screen.

Setup:
------

Hardware
Platform: SKY LAKE Y A0 
CPU : Intel(R) Core(TM) m5-6Y57 CPU @ 1.10GHz (family: 6, model: 78  stepping: 3)
MCP : SKL-Y  D0 2+2 (ou ULX-D1)
QDF : QJA4 
CPU : SKL D0
Chipset PCH: Sunrise Point LP C1       
CRB : SKY LAKE Y LPDDR3 RVP3 CRB FAB2
Reworks : All Mandatories

Software
BIOS : SKLSE2R1.R00.B104.B01.1511110114
ME FW : 11.0.0.1191
Ksc (EC FW): 1.19
Linux : Ubuntu 15.04 64 bits
Kernel : 4.3.0-rc5 drm-intel-next-fixes-2015-11-06
commit 816d2206f0f9953ca854e4ff1a2749a5cbd62715
Merge: d0baf92 1b0e3a0
Author: Dave Airlie <airlied@gmail.com>
Date:   Sat Nov 7 17:16:59 2015 +1000

    Merge tag 'drm-intel-next-fixes-2015-11-06' of git://anongit.freedesktop.org/drm-in
 

cairo: 1.14.2
drm: 2.4.65
vaapi/intel-driver: 1.6.1
vaapi/libva: 1.6.1
mesa: mesa-11.0.5
xf86-video-intel: 2.99.917
xserver:  xorg-server-1.17.2

Intel GPU Tools: master bfea74a9f64a900bcb90f946b38746781017449f
Comment 9 Patrik Jakobsson 2015-11-26 10:38:49 UTC
The hang and the wm_changed warning looks like two unrelated issues. On my SKL-Y the hang occurs only when using DP - Pipe B - Plane A+B. All other combinations I've tried so far works fine. Running with disable_power_well=0 makes no difference so I'm guessing watermarks is the problem here.
Comment 10 Mika Kahola 2015-12-01 14:10:12 UTC
Can you try out the latest -nightly as I wasn't able to reproduce the bug with our Skylake-Y. This patch that has recently landed into -nightly might have a positive effect 

https://patchwork.freedesktop.org/patch/66442/
Comment 11 Patrik Jakobsson 2015-12-01 14:22:30 UTC
Tried with drm-intel-nightly from yesterday (2015-11-30) but the system still hangs. CATERR_LED lights up if that is of any help. Didn't see any fifo underrun warnings this time so that might be an improvement at least.
Comment 12 Maarten Lankhorst 2015-12-16 09:50:07 UTC
Is this still an issue?
Comment 13 Patrik Jakobsson 2015-12-18 13:08:05 UTC
I haven't tested in a week but last time I looked I found that this is a regression and bisected it to:
commit 942840371cde152fe57c15e0e8483b760e7763e3
Author: Matt Roper <matthew.d.roper@intel.com>
Date:   Mon Sep 21 17:21:48 2015 -0700

It seems that at some point we're unreferencing a framebuffer that is in use.
Comment 14 Matt Roper 2015-12-19 01:39:20 UTC
(In reply to Patrik Jakobsson from comment #13)
> I haven't tested in a week but last time I looked I found that this is a
> regression and bisected it to:
> commit 942840371cde152fe57c15e0e8483b760e7763e3
> Author: Matt Roper <matthew.d.roper@intel.com>
> Date:   Mon Sep 21 17:21:48 2015 -0700
> 
> It seems that at some point we're unreferencing a framebuffer that is in use.

Has fb reference counting always been an issue since this bug was opened back in September or is that a relatively recent discovery?  I just fixed a bug that could lead to refcount problems with http://patchwork.freedesktop.org/patch/68713/ although I feel like that bug was introduced too recently to be the original root cause here.  I'm wondering if it could be multiple bugs contributing to the behavior seeing rather than a single bug.
Comment 15 Patrik Jakobsson 2016-01-14 13:22:41 UTC
It seems to have been a problem since drm enabled atomic fbdev restore. I've rerun the bisect several times but unfortunately I now get varying results. So we have points where the problem is less visible after 9428403 (possibly due to i915 atomic changes) but it still looks like refcounting of fbs is the problem here.
Comment 16 Maarten Lankhorst 2016-01-25 08:58:43 UTC
Is this not fixed with commit 7118fd9bd975a9f309323?
Comment 17 Kimmo Nikkanen 2016-01-27 09:17:00 UTC
Assigning to QA to verify whether fixed with commit 7118fd9bd975a9f309323
Comment 18 Patrik Jakobsson 2016-01-28 14:34:59 UTC
I just tested with latest nightly (7118fd9bd975a9f309323 included) but I still get the hang.
Comment 19 cprigent 2016-02-02 10:24:43 UTC
Created attachment 121455 [details]
4.5-rc1_nuc-skly_kms-flip_kern.log

I don't reproduce the crash (tested 10 times), test is success but with following log:

./kms_plane --run-subtest plane-position-covered-pipe-B-plane-2                                            IGT-Version: 1.13-NOT-GIT (x86_64) (Linux: 4.5.0-rc1-nightly+ x86_64)
Testing connector HDMI-A-1 using pipe B plane 2
Testing connector DP-1 using pipe B plane 2
Subtest plane-position-covered-pipe-B-plane-2: SUCCESS (0.746s)
[   33.164446] [drm:intel_cpu_fifo_underrun_irq_handler [i915]] *ERROR* CPU pipe B FIFO underrun
[   33.178989] [drm:intel_atomic_commit [i915]] *ERROR* mismatch in dpll_hw_state.cfgcr1 (expected 0x80400173, found 0x000003a5)
[   33.179006] [drm:intel_atomic_commit [i915]] *ERROR* mismatch in base.adjusted_mode.crtc_clock (expected 148500, found 168400)
[   33.179020] [drm:intel_atomic_commit [i915]] *ERROR* mismatch in port_clock (expected 148500, found 168400)

Hardware
Platform: NUC6i3SYH
CPU: Intel(R) Core(TM) i3-6100U CPU @ 2.30GHZ (family 6, model 78, stepping 3)
Motherboard version: H81132-502
GPU: Intel® HD Graphics 520 - Intel Corporation Sky Lake Integrated Graphics (rev 07)
Memory: one 8GB card Kingston KVR21S15D8/8
SSD: Samsung 850 EVO M.2 120 Go
Software
Bios: SYSKLi35.86A.0024.2015.1027.2142
Linux distribution: Ubuntu 15.10 64 bits
Kernel: drm-intel-nightly 4.5.0-rc1 5d3deb0 from http://cgit.freedesktop.org/drm-intel
   commit 5d3deb0902a962218ad9b0e583e4d1bbdec29f9a
   Author: Rodrigo Vivi <rodrigo.vivi@intel.com>
   Date:   Mon Feb 1 12:05:18 2016 -0800
   drm-intel-nightly: 2016y-02m-01d-20h-05m-03s UTC integration manifest
drm: tag libdrm-2.4.66 e342c0f from http://cgit.freedesktop.org/mesa/drm/
mesa: tag mesa-11.0.8 261daab from http://cgit.freedesktop.org/mesa/mesa/
cairo: tag 1.15.2 db8a7f1 from http://cgit.freedesktop.org/cairo
waffle: master bb29b2a from https://github.com/waffle-gl/waffle
xorg-server-macros: master d7acec2 from git://git.freedesktop.org/git/xorg/util/macros
libva: tag libva-1.6.1 cb418f6 from http://cgit.freedesktop.org/libva/
vaapi-intel-driver: tag 1.6.1 2110b3a from http://cgit.freedesktop.org/vaapi/intel-driver
Comment 20 Patrik Jakobsson 2016-02-10 10:04:24 UTC
I still see the hang with nightly 2016-02-10.

System info
Platform: Skylake Y RVP3 D0/C1
CPU: Intel(R) Core(TM) m7-6Y75 CPU @ 1.20GHz
BIOS: 94.4 (SKLSE2R1.R00.B094.B04.1508102148)
EC: 1.15

Monitors:
eDP: 3200x1800
DP: 1600x900

I know I'm on a rather old BIOS and EC. Will upgrade to see if that makes a difference.
Comment 21 cprigent 2016-03-15 08:23:56 UTC
Reassign to Patrik Jakobsson to check with last Bios and EC.
Comment 22 Patrik Jakobsson 2016-04-05 13:24:44 UTC
The following patch by Matt fixes the problem on my machine (Note that it's not yet merged).

https://patchwork.freedesktop.org/patch/79170/
Comment 23 Kimmo Nikkanen 2016-04-07 09:38:52 UTC
Assigning to QA for verification
Comment 24 maria guadalupe 2016-04-20 20:03:14 UTC
This test is passing under the following configuration 

Software configuration
=======================
Linux distribution: Ubuntu 15.10 64 bits
Kernel: drm-intel-nightly 4.6.0-rc3_d9131d6 from http://cgit.freedesktop.org/drm-intel/
commit d9131d62d18ba94fb3ca019f1156c22b5f4ce23c
Author: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
Date:   Fri Apr 15 14:54:26 2016 +0100
drm-intel-nightly: 2016y-04m-15d-13h-53m-44s UTC integration manifestdrm: tag libdrm-2.4.66-33-gf884af9
      libdrm 2.4.67-25 cc9a53f from git://git.freedesktop.org/git/mesa/drm
mesa 11.1.2 7bcd827 from git://git.freedesktop.org/git/mesa/mesa
cairo 1.15.2 db8a7f1 from git://git.freedesktop.org/git/cairo
xorg/xserver 1.18.0-274 8437955 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-634 81029be from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
vaapi/libva 1.7.0-1 2339d10 from git://git.freedesktop.org/git/vaapi/libva
vaapi/intel-driver 1.7.0-8 2c1bec0 from git://git.freedesktop.org/git/vaapi/intel-driver
intel-gpu-tool 1.14 7bd2ac6 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
rendercheck master 44032a7 from http://anongit.freedesktop.org/git/xorg/app/rendercheck.git

test output
==============
#./kms_plane --run-subtest plane-position-covered-pipe-B-plane-2
IGT-Version: 1.14-g41a26b5 (x86_64) (Linux: 4.6.0-rc3-nightly+ x86_64)
Testing connector eDP-1 using pipe B plane 2
Testing connector HDMI-A-1 using pipe B plane 2
Subtest plane-position-covered-pipe-B-plane-2: SUCCESS (3.746s)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.